unpackaged/main/default/objects/Public_Provider_Names__c/fields/OW_own_company__c.field-meta.xml
<CustomField>
    <fullName>OW_own_company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this indicates that this provider is one our own companies. Initially, this only captures Octopus Wealth but could capture a broader set of firms in time.</description>
    <label>Own company</label>
    <type>Checkbox</type>
</CustomField>