unpackaged/main/default/objects/Public_Provider_Names__c/fields/PartnerCompany__c.field-meta.xml
<CustomField>
    <fullName>PartnerCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, indicates that we sometimes recommend and facilitate clients opening a product with this provider</description>
    <inlineHelpText>If true, indicates that we sometimes recommend and facilitate clients opening a product with this provider</inlineHelpText>
    <label>Partner company</label>
    <type>Checkbox</type>
</CustomField>