unpackaged/main/default/objects/Public_Provider_Names__c/fields/ProtectionPartner__c.field-meta.xml
<CustomField>
    <fullName>ProtectionPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether we can recommend products from this provider to clients</description>
    <inlineHelpText>Indicates whether we can recommend products from this provider to clients</inlineHelpText>
    <label>Protection partner</label>
    <type>Checkbox</type>
</CustomField>