unpackaged/main/default/objects/Public_Provider_Names__c/fields/ReferenceName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier</description>
    <externalId>true</externalId>
    <label>Reference Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>