unpackaged/main/default/objects/Public_Provider_Names__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OW_own_company__c</columns>
    <columns>OW_group_company__c</columns>
    <columns>ReferenceName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>